--- a/templates/about.html
+++ b/templates/about.html
@@ -106,9 +106,9 @@
                     </div>
                     <div class="row pt-1">
                         <span id="au_profile_content_header">Position:</span>
-                        <span class="pb-2" id="au_profile_content_content">Project Leader</span>
+                        <span class="pb-2" id="au_profile_content_position">Project Leader</span>
                         <span id="au_profile_content_header">Contact:</span>
-                        <span id="au_profile_content_content">test@gmail.com</span>
+                        <span id="au_profile_content_contact">ljhyong001@mymail.sim.edu.sg</span>
                     </div>
                 </div>
                 <div class="col">
@@ -120,9 +120,9 @@
                     </div>
                     <div class="row pt-1">
                         <span id="au_profile_content_header">Position:</span>
-                        <span class="pb-2" id="au_profile_content_content">Backend Developer</span>
+                        <span class="pb-2" id="au_profile_content_position">Backend Developer</span>
                         <span id="au_profile_content_header">Contact:</span>
-                        <span id="au_profile_content_content">test@gmail.com</span>
+                        <span id="au_profile_content_contact">xynwong001@mymail.sim.edu.sg</span>
                     </div>
                 </div>
                 <div class="col">
@@ -134,9 +134,9 @@
                     </div>
                     <div class="row pt-1">
                         <span id="au_profile_content_header">Position:</span>
-                        <span class="pb-2" id="au_profile_content_content">Backend Developer</span>
+                        <span class="pb-2" id="au_profile_content_position">Backend Developer</span>
                         <span id="au_profile_content_header">Contact:</span>
-                        <span id="au_profile_content_content">test@gmail.com</span>
+                        <span id="au_profile_content_contact">yheloo001@mymail.sim.edu.sg</span>
                     </div>
                 </div>
                 <div class="col">
@@ -148,9 +148,9 @@
                     </div>
                     <div class="row pt-1">
                         <span id="au_profile_content_header">Position:</span>
-                        <span class="pb-2" id="au_profile_content_content">Backend Developer</span>
+                        <span class="pb-2" id="au_profile_content_position">Backend Developer</span>
                         <span id="au_profile_content_header">Contact:</span>
-                        <span id="au_profile_content_content">test@gmail.com</span>
+                        <span id="au_profile_content_contact">kwhong001@mymail.sim.edu.sg</span>
                     </div>
                 </div>
                 <div class="col">
@@ -162,9 +162,9 @@
                     </div>
                     <div class="row pt-1">
                         <span id="au_profile_content_header">Position:</span>
-                        <span class="pb-2" id="au_profile_content_content">Frontend Developer</span>
+                        <span class="pb-2" id="au_profile_content_position">Frontend Developer</span>
                         <span id="au_profile_content_header">Contact:</span>
-                        <span id="au_profile_content_content">ajw930@uowmail.edu.au</span>
+                        <span id="au_profile_content_contact">ajwijaya001@mymail.sim.edu.sg</span>
                     </div>
                 </div>
             </div>
