--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -95,7 +95,7 @@
                         <div class="row pt-3 pb-3">
                             <div class="col">
                                 <span class="ms-3 pb-2" id="inputhead" >Category</span>
-								<select class="ms-3 ps-2 cpinput-s" required id="category" name="category" class="rdbox" required>
+								<select class="ms-3 ps-2 cpinput-s" id="category" name="category" class="rdbox" required>
 									 <option value="" disabled selected hidden>Category</option>
 									 {% for cat in categories  %}
 									  <option value="{{ cat }}">{{ cat }}</option>
@@ -105,12 +105,12 @@
                             </div>
                             <div class="col">
                                 <span class="pb-2" id="inputhead">E COMMERCE SHOP MAIN URL</span>
-                                <input class="ms-3 ps-2 cpinput-s" type="text" placeholder="Example : https://www.lazada.sg/men-sports-clothing-t-shirts" name="url" required>
+                                <input class="ps-2 cpinput-s" type="text" placeholder="Example : https://www.lazada.sg/men-sports-clothing-t-shirts" name="url" required>
                             </div>
                         </div>
 						<div class="row">
                             <span class="ms-3 pb-2" id="inputhead">Crawler Type</span>
-                            <select class="ms-4 ps-2 cpinput-s" required id="crawler" name="crawler" class="rdbox" readonly required>
+                            <select class="ms-4 ps-2 cpinput-s" id="crawler" name="crawler" class="rdbox" readonly required>
 								 <option value="" disabled selected hidden>Select a Crawler Type</option>
 								 <option value="whole_page" >Whole Page</option>
 								 <option value="single_page" >Single Page</option>
@@ -142,7 +142,7 @@
                         <div class="row pt-3 pb-3">
                             <div class="col">
                                 <span class="ms-3 pb-2" id="inputhead" >Category</span>
-								<select class="ms-3 ps-2 cpinput-s" required id="category" name="category" class="rdbox" readonly required>
+								<select class="ms-3 ps-2 cpinput-s" id="category" name="category" class="rdbox" readonly required>
 									 <option value="" disabled selected hidden>Category</option>
 									 {% for cat in categories  %}
 									 {% if cat == "All" %}
@@ -159,7 +159,7 @@
                         </div>
 						<div class="row">
                             <span class="ms-3 pb-2" id="inputhead">Crawler Type</span>
-                            <select class="ms-3 ps-2 cpinput-s" required id="crawler" name="crawler" class="rdbox" readonly required>
+                            <select class="ms-3 ps-2 cpinput-s" id="crawler" name="crawler" class="rdbox" readonly required>
 								 <option value="" disabled selected hidden>Crawler Type</option>
 								 <option value="whole_page" disabled>Whole Page</option>
 								 <option value="single_page" selected>Single Page</option>
