--- a/templates/about.html
+++ b/templates/about.html
@@ -70,7 +70,7 @@
             </div>
             <div class="row mt-5 pb-5">
                 <div class="col-3 ms-4">
-                    <img class="ms-2 pt-3" src="./images/purpose.png">
+                    <img class="ms-2 pt-3" src="images/purpose.png">
                 </div>
                 <div class="col-8">
                     <span class="pb-3" id="au_purpose_header">Purpose</span>
@@ -99,7 +99,7 @@
             <div class="row ps-3 pe-3">
                 <div class="col">
                     <div class="row">
-                        <img class="p-2" src="./images/profile_photo1.png">
+                        <img class="p-2" src="images/profile_photo1.png">
                     </div>
                     <div class="row text-center pb-2">
                         <span id="au_profile_name">Lionel</span>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col">
                     <div class="row">
-                        <img class="p-2" src="./images/profile_photo1.png">
+                        <img class="p-2" src="images/profile_photo1.png">
                     </div>
                     <div class="row text-center pb-2">
                         <span id="au_profile_name">Nicholas</span>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col">
                     <div class="row">
-                        <img class="p-2" src="./images/profile_photo1.png">
+                        <img class="p-2" src="images/profile_photo1.png">
                     </div>
                     <div class="row text-center pb-2">
                         <span id="au_profile_name">Edwin</span>
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col">
                     <div class="row">
-                        <img class="p-2" src="./images/profile_photo1.png">
+                        <img class="p-2" src="images/profile_photo1.png">
                     </div>
                     <div class="row text-center pb-2">
                         <span id="au_profile_name">Wei Hong</span>
@@ -155,7 +155,7 @@
                 </div>
                 <div class="col">
                     <div class="row">
-                        <img class="p-2" src="./images/profile_photo1.png">
+                        <img class="p-2" src="images/profile_photo1.png">
                     </div>
                     <div class="row text-center pb-2">
                         <span id="au_profile_name">Jessica</span>
