--- a/templates/problem_reported.html
+++ b/templates/problem_reported.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         function showPassword() {
             var x = document.getElementById("passwordInput");
@@ -208,8 +209,8 @@
 										<div class="col-2 pt-2 pb-2" style="font-family: 'Mulish';font-style: normal;font-weight: 600;font-size: 12px;line-height: 18px;letter-spacing: 0.2px;color: #252733;">issue Description : </div>
 										<div class="col-10 description2 pt-2 pb-2" style="font-family: 'Mulish';font-style: normal;font-weight: 600;font-size: 12px;line-height: 18px;letter-spacing: 0.2px;color: #252733;"><strong></strong></div>
 									  </div>
-									  <div class="row">
-										<img class="images" style="height:128px;width:128px;padding:0 0 0 10px;"></img>
+									  <div class="row all_images">
+										<img class="small-image images" style="height:128px;width:128px;padding:0 0 0 10px;"></img>
 									  </div>
 									</div>
                                 </div>		
@@ -232,15 +233,67 @@
 										  </div>
 										</div>
                             </li>
+							
+							
+							
                         </div>
                     </div>
+					<!-- // popup modal -->
+
+								<div id="show_image_popup" class="text-center">
+								  <div id="image-show-area">								  
+								  <div class="close-btn-area">
+									<button id="close-btn">X</button> <!--     close btn -->
+								  </div>
+									<img id="large-image" src="" alt=""> <!--     popup imge -->
+								  </div>
+								</div>
                 </div>
             </div>
         </div>
     </div>
 </body>
-<script>
+<style>
+	#show_image_popup{
+	  position: fixed; /*  so that not take place   */
+	  top: 50%;
+	  left: 50%;
+	  z-index: 1000; /*  adobe all elements   */
+	  transform: translate(-50%, -50%); /*  make center   */
 
+	  display: none; /*  to hide first time   */
+	}
+	#show_image_popup img{
+	  max-width: 90%;
+	  height: 100%;
+	}	
+	#image-show-area{
+		display:inline-block;
+		margin:auto;		
+	}
+	.close-btn-area{
+		width:95%;
+		text-align:right!important;
+	}
+</style>
+<script>
+	$(document).ready(function(){
+		
+		$('.all_images').on('click', '.small-image', function(){
+			// $("#show_image_popup").fadeIn();
+			var path = $(this).attr('src');
+			$("#large-image").attr('src',path);
+			$("#show_image_popup").show();
+			
+			$(this).addClass('active');
+		})
+		$("#close-btn").click(function(){
+			$("#show_image_popup").hide();
+		})
+	})
+
+		
+		
 	const data = {{ all_issues | tojson }}
 
     const options = {
@@ -278,7 +331,6 @@
 		}
 	function change_display(el){
 		child = el.firstElementChild;
-		console.log(child);
 		if (child.textContent == "+")
 		{
 			child.textContent = "-";
@@ -286,6 +338,28 @@
 		else
 		{
 			child.textContent = "+";
+		}		
+		var target = el.getAttribute('data-bs-target');
+		var id = target.substring(1);
+		var parent = document.getElementById(id)
+		var all_img = parent.getElementsByTagName('img');
+		var img = all_img[0]
+		var img_src = img.getAttribute('src')
+		const all_src =  img_src.split(",");
+		if (all_src.length > 1)
+		{
+			all_img[0].src = all_src[0]
+			for (i = 1; i < all_src.length;i++)
+			{
+				let image = document.createElement('img');
+				image.style.width='128px';
+				image.style.height='128px';
+				image.style.padding = "0 0 0 10px";
+				image.classList.add("small-image");
+				image.src = all_src[i];
+				let images = parent.querySelector(".all_images");
+				images.appendChild(image);
+			}
 		}
 	}
 </script>
