--- a/templates/view_project.html
+++ b/templates/view_project.html
@@ -14,9 +14,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-
+	<style>
+.pagination li{position:relative;display:block;color:#0d6efd;text-decoration:none;background-color:#fff;border:1px solid #dee2e6}.pagination li:hover{z-index:2;color:#024dbc;background-color:#e9ecef;border-color:#dee2e6}.pagination li:focus{z-index:3;outline:0;box-shadow:0 0 0 .2rem rgba(13,110,253,.25)}.page-item:not(:first-child) .pagination li{margin-left:-1px}.page-item.active .pagination li{z-index:3;color:#fff;background-color:#0d6efd;border-color:#0d6efd}.page-item.disabled .pagination li{color:#6c757d;pointer-events:none;background-color:#fff;border-color:#dee2e6}.pagination li{padding:.375rem .75rem}.page-item:first-child .pagination li{border-top-left-radius:.25rem;border-bottom-left-radius:.25rem}.page-item:last-child .pagination li{border-top-right-radius:.25rem;border-bottom-right-radius:.25rem}.pagination-lg .pagination li{padding:.75rem 1.5rem;font-size:1.25rem}.pagination-lg .page-item:first-child .pagination li{border-top-left-radius:.3rem;border-bottom-left-radius:.3rem}.pagination-lg .page-item:last-child .pagination li{border-top-right-radius:.3rem;border-bottom-right-radius:.3rem}.pagination-sm .pagination li{padding:.25rem .5rem;font-size:.875rem}.pagination-sm .page-item:first-child .pagination li{border-top-left-radius:.2rem;border-bottom-left-radius:.2rem}.pagination-sm .page-item:last-child .pagination li{border-top-right-radius:.2rem;border-bottom-right-radius:.2rem}
+</style>
 <body style="background: #F7F8FC;">
     <div class="row">
         <div class="col col-2">
@@ -57,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div class="col ml-5 pt-4">
+        <div class="col pt-4">
             <!-- overview header -->
             <div class="row pb-4">
                 <div class="col-8">
@@ -91,80 +95,72 @@
                 </div>
             </div>
             <!-- first box -->
-            <div class="container pt-4">
-                <div class="row pbox-l" style="height: unset;min-height: 200px;max-height: 467px;">
-                    <!-- first row -->
-                    <div class="row pt-4">
-                        <span class="ms-3" id="headline">{{	project_information["pname"] }}</span>
-                    </div>
-                    <!-- second row -->
-                    <div class="row">
-                        <span class="ms-3 pb-2" id="subhead">Type of Project: {{	project_information["category"] }}</span>
-                    </div>
-                    <!-- third row -->
-                    <div class="row pt-3 pb-3">
-                        <div class="col-4">
-                            <span class="ms-3" id="headline">Products</span>
-                        </div>
-                        <div class="col-3">
-                            <span id="headline">Item Category</span>
-                        </div>
-                        <div class="col-3">
-                            <span id="headline">Compared to Other Category</span>
-                        </div>
-                        <div class="col-2">
-                            <span id="headline">Rating</span>
-                        </div>
-                    </div>
-					
-					{% if item_lists | length == 0 %}
+            <div class="container pt-4" style="margin-left: 10px;">
+				
+				<div id="mylist">
+					<div class="row pbox-l" style="height: unset;min-height: 200px;max-height: 467px;width:1462px;">
+						<!-- first row -->
+						<div class="row pt-4">
+							<span class="ms-3" id="headline">{{	project_information["pname"] }}</span>
+						</div>
+						<!-- second row -->
+						<div class="row">
+							<span class="ms-3 pb-2" id="subhead">Type of Project: {{	project_information["category"] }}</span>
+						</div>
+						<!-- third row -->
+						<div class="row pt-3 pb-3">
+							<div class="col-4">
+								<span class="ms-3" id="headline">Products</span>
+							</div>
+							<div class="col-3">
+								<span id="headline">Item Category</span>
+							</div>
+							<div class="col-3">
+								<span id="headline">Compared to Other Category</span>
+							</div>
+							<div class="col-2">
+								<span id="headline">Rating</span>
+							</div>
+						</div>					
+					</div>
+					<ul class="list list-group list-group-flush"  style="border-bottom: 2px solid #DFE0EB;"></ul>
+					<div class="d-flex justify-content-center mt-2" >
+						<ul class="pagination"></ul>
+					</div>
+				</div>
+				
+				{% if item_lists | length == 0 %}
 					<div class="row pt-3">
 					<span class="ms-4" id="content">Product stats is currently empty...</span>
 					<span class="ms-4" id="content">Crawling is still in progress...</span>
-					</div>
-					{% endif %}
+					</div>					
+				{% endif %}
                     <!-- fourth row -->
-					{%	for key, value in item_lists.items()	%}
 					<!--<a href="" class="items">-->
-                    <div class="row pt-3">
-                        <div class="col-4 pb-3 border-bottom">
-                            <span class="ms-4" id="content">{{ key |replace("_", " ") }}</span>
-                        </div>
-                        <div class="col-3 border-bottom">
-                            <span class="pt-4" id="content">{{ value["category"] }}</span>
-                        </div>
-                        <div class="col-3 border-bottom">
-						{% for item in value["list"] %}
-                            <span class="pt-4" id="content">{{ item }}</span>
-						{% endfor %}
-                        </div>
-                        <div class="col-2 border-bottom">
-                            <img src="data:image/png;base64,{{ value['statistics'] }}">
-                        </div>
-                    </div>
-					<!--</a>-->
-					{%	endfor	%}
-                    <!-- fifth row 
-                    <div class="row pt-4 pb-5">
-                        <div class="col-4 pb-3 border-bottom">
-                            <img class="ms-3" src="images/shoe2.png">
-                            <span class="ms-3" id="content">Shoe 2</span>
-                        </div>
-                        <div class="col-3 border-bottom">
-                            <span id="content">Females in 40s</span><br />
-                            <span id="content">Males in 30s</span><br />
-                            <span id="content">Females in 20s</span>
-                        </div>
-                        <div class="col-3 border-bottom">
-                            <span id="content">10%</span><br />
-                            <span id="content">12%</span><br />
-                            <span id="content">50%</span>
-                        </div>
-                        <div class="col-2 border-bottom">
-                            <span class="pt-4" id="recommendation">Females in 20s</span>
-                        </div>
-                    </div>-->
-                </div>
+                    
+					
+					<div><!-- third row -->
+							<div style="display:none;">
+								<li id="myitem" class="list-group-item" style="max-width:1467px;">
+								
+								<div class="row pt-3">
+									<div class="col-4 pb-3 border-bottom">
+										<span class="ms-4 name" id="content"></span>
+									</div>
+									<div class="col-3 border-bottom">
+										<span class="pt-4 category" id="content"></span>
+									</div>
+									<div class="col-3 border-bottom">
+										<span class="pt-4 list" id="content"></span>
+									</div>
+									<div class="col-2 border-bottom">
+										<img class="statistics" style="height:360px;width:360px;">
+									</div>
+								</div>								
+									
+								</li>
+							</div>
+
             </div>
 
             <!-- second box -->
@@ -229,5 +225,15 @@
         </div>
     </div>
 </body>
-
+<script>
+        
+		const data = {{item_lists | tojson}};
+        const options = {
+            valueNames: [ 'category',{name:'statistics',attr:'src'},'name','list'],
+            item: 'myitem',
+            page: 5,
+            pagination: true
+        }
+		var l = new List('mylist', options, data);
+</script>
 </html>
