--- a/templates/view_project.html
+++ b/templates/view_project.html
@@ -98,7 +98,7 @@
             <div class="container pt-4" style="margin-left: 10px;">
 				
 				<div id="mylist">
-					<div class="row pbox-l" style="height: unset;min-height: 200px;max-height: 467px;width:1462px;">
+					<div class="row pbox-l" style="height: unset;min-height: 200px;max-height: 467px;width:1462px;margin-left: -3px;">
 						<!-- first row -->
 						<div class="row pt-4">
 							<span class="ms-3" id="headline">{{	project_information["pname"] }}</span>
@@ -112,10 +112,10 @@
 							<div class="col-4">
 								<span class="ms-3" id="headline">Products</span>
 							</div>
-							<div class="col-3">
+							<div class="col-2">
 								<span id="headline">Item Category</span>
 							</div>
-							<div class="col-3">
+							<div class="col-3 me-5">
 								<span id="headline">Compared to Other Category</span>
 							</div>
 							<div class="col-2">
@@ -141,13 +141,13 @@
 					
 					<div><!-- third row -->
 							<div style="display:none;">
-								<li id="myitem" class="list-group-item" style="max-width:1467px;">
+								<li id="myitem" class="list-group-item" style="width:1455px;padding-left: 0px;">
 								
 								<div class="row pt-3">
 									<div class="col-4 pb-3 border-bottom">
 										<span class="ms-4 name" id="content"></span>
 									</div>
-									<div class="col-3 border-bottom">
+									<div class="col-2 border-bottom">
 										<span class="pt-4 category" id="content"></span>
 									</div>
 									<div class="col-3 border-bottom">
