--- a/templates/view_project.html
+++ b/templates/view_project.html
@@ -144,16 +144,16 @@
 								<li id="myitem" class="list-group-item" style="width:1455px;padding-left: 0px;">
 								
 								<div class="row pt-3">
-									<div class="col-4 pb-3 border-bottom">
+									<div class="col-4 pb-3">
 										<span class="ms-4 name" id="content"></span>
 									</div>
-									<div class="col-2 border-bottom">
+									<div class="col-2">
 										<span class="pt-4 category" id="content"></span>
 									</div>
-									<div class="col-3 border-bottom">
+									<div class="col-3">
 										<span class="pt-4 list" id="content"></span>
 									</div>
-									<div class="col-2 border-bottom">
+									<div class="col-2">
 										<img class="statistics" style="height:360px;width:360px;">
 									</div>
 								</div>								
