--- a/templates/view_project.html
+++ b/templates/view_project.html
@@ -123,7 +123,7 @@
 							</div>
 						</div>					
 					</div>
-					<ul class="list list-group list-group-flush"  style="border-bottom: 2px solid #DFE0EB;"></ul>
+					<ul class="list list-group list-group-flush"  style="border-bottom: 2px solid #DFE0EB;width:1455px;"></ul>
 					<div class="d-flex justify-content-center mt-2" >
 						<ul class="pagination"></ul>
 					</div>
