--- a/templates/manage_subscription.html
+++ b/templates/manage_subscription.html
@@ -229,6 +229,11 @@ function if_checked()
 </form>
             </div>
         </div>
+			<div class="row ms-4 pt-4 pb-5">
+			<a href="/subscription">
+                <button id="pbutton">Change Subscription</button>
+				</a>
+            </div>
     </div>
 </body>
 
