--- a/templates/test_item_rating.html
+++ b/templates/test_item_rating.html
@@ -95,10 +95,7 @@
 								<select class="ms-3 ps-2 cpinput-s" required id="category" name="category" class="rdbox" required>
 									<option value="" disabled selected hidden>Select a Category</option>
 									{% for cat in categories  %}
-									{% if cat == "All" %}
-									{% else %}
 									<option value="{{ cat }}">{{ cat }}</option>
-									{% endif %}
 									{% endfor %}
 								</select>
                             </div>
@@ -106,12 +103,9 @@
                             <span class="ms-3 pb-2" id="inputhead">Target Category</span>
 								<select class="ms-3 ps-2 cpinput-s" required id="tcategory" name="tcategory" class="rdbox" required>
 									<option value="" disabled selected hidden>Select a targetted Category</option>
+									<option value="">All</option>
 									{% for cat in categories  %}
-									{% if cat == "All" %}
-									<option value="">{{ cat }}</option>
-									{% else %}
 									<option value="{{ cat }}">{{ cat }}</option>
-									{% endif %}
 									{% endfor %}
 								</select>
                             </div>
@@ -142,10 +136,7 @@
 								<select class="ms-3 ps-2 cpinput-s" required id="category" name="category" class="rdbox" readonly required>
 									<option value="" disabled selected hidden>Select a Category</option>
 									{% for cat in categories  %}
-									{% if cat == "All" %}
-									{% else %}
 									<option value="{{ cat }}">{{ cat }}</option>
-									{% endif %}
 									{% endfor %}
 								</select>
                             </div>
@@ -153,12 +144,9 @@
                             <span class="pb-2" id="inputhead">Target User Group</span>
 								<select class="ms-3 ps-2 cpinput-s" required id="tcategory" name="tcategory" class="rdbox" readonly required>
 									<option value="" disabled selected hidden>Select a targetted Category</option>
+									<option value="">All</option>
 									{% for cat in categories  %}
-									{% if cat == "All" %}
-									<option value="">{{ cat }}</option>
-									{% else %}
 									<option value="{{ cat }}">{{ cat }}</option>
-									{% endif %}
 									{% endfor %}
                             </div>
                         </div>
